--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,10 @@ footer {
     background-color:azure;
   }
 
+  .col-3 {
+    width: 50%;
+  }
+
   #column-1 {
     background-color:cadetblue;
   }
@@ -73,6 +77,7 @@ footer {
 
   #column-3 {
     background-color:cornflowerblue;
+    width: 100%;
   }
 
   footer {
@@ -88,6 +93,10 @@ footer {
     background-color:floralwhite;
   }
 
+  .col-3{
+    width: 33.3%;
+  }
+
   #column-1 {
     background-color:darkorchid;
   }
@@ -98,6 +107,7 @@ footer {
 
   #column-3 {
     background-color:darkmagenta;
+    width: 33.3%;
   }
 
   footer {
